--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.3",
     "@ant-design/pro-layout": "^6.5.0",
     "antd": "^4.16.11",
     "classnames": "^2.3.1",
