--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "antd": "^4.16.11",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
+    "react-input-color": "^4.0.0",
     "react": "17.x",
-    "react-color": "^2.19.3",
     "react-dom": "17.x",
     "umi": "^3.5.17"
   },
