--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@scena/guides": "^0.17.0",
     "antd": "^4.16.11",
     "classnames": "^2.3.1",
+    "lib-flexible": "^0.3.2",
     "lodash": "^4.17.21",
     "react": "17.x",
     "react-dom": "17.x",
