--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react": "17.x",
     "react-dom": "17.x",
     "react-input-color": "^4.0.0",
-    "umi": "^3.5.17"
+    "umi": "^3.5.17",
+    "zarm": "^2.9.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.17",
+    "babel-plugin-import": "^1.13.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
