--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ant-design/icons": "^4.6.3",
     "@ant-design/pro-layout": "^6.5.0",
     "@scena/guides": "^0.17.0",
+    "animate.css": "^4.1.1",
     "antd": "^4.16.11",
     "classnames": "^2.3.1",
     "lib-flexible": "^0.3.2",
